@@ -1,11 +1,12 @@
 package ch.retorte.intervalmusiccompositor.commons.platform;
 
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-
 import org.junit.Test;
+
+import static org.hamcrest.CoreMatchers.instanceOf;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author nw
@@ -64,4 +65,25 @@ public class PlatformTest {
   public void shouldFailOnUnknownPlatform() {
     new PlatformFactory("Unknown platform").getPlatform();
   }
+
+  @Test
+  public void shouldProduceCorrectDistributionRootPath() {
+    // given
+    Platform platform = new PlatformFactory("Linux").getPlatform();
+    String binaryPath1 = "/home/user/intervalmusiccompositor/bin";
+    String binaryPath2 = "/home/user/./intervalmusiccompositor/bin";
+    String binaryPath3 = "/home/user/intervalmusiccompositor/bin/.";
+
+    // when
+    String distributionRootPath1 = platform.getDistributionRootPathWith(binaryPath1);
+    String distributionRootPath2 = platform.getDistributionRootPathWith(binaryPath2);
+    String distributionRootPath3 = platform.getDistributionRootPathWith(binaryPath3);
+
+    // then
+    assertThat(distributionRootPath1, is("/home/user/intervalmusiccompositor"));
+    assertThat(distributionRootPath2, is("/home/user/intervalmusiccompositor"));
+    assertThat(distributionRootPath3, is("/home/user/intervalmusiccompositor"));
+
+  }
+
 }
