@@ -1,6 +1,11 @@
 retorte laboratories (retorte.ch) IntervalMusicCompositor change log
 --------------------------------------------------------------------------------
 
+202x-xx-xx  2.11.3 [not yet released]
+--------------------------------------------------------------------------------
+FIX  #65    Self-Upgrade: Wrong root directory chosen in Linux.
+
+
 2021-11-13  2.11.2
 --------------------------------------------------------------------------------
 FIX  #64    Self-Upgrade: Downloading new version fails with 'handshake failure'.
